// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Responsibilities when responsibilities prop is set to multiple responsibilities renders an unordered list showing the responsibilities 1`] = `
"<ul>
  <li>
    <div>
      <p>Test Description 1</p>
    </div>
  </li>
  <li>
    <div>
      <p>Test Description 2</p>
    </div>
  </li>
  <li>
    <div>
      <p>Test Description 3</p>
    </div>
  </li>
</ul>"
`;

exports[`Responsibilities when responsibilities prop is set to one responsibility renders an unordered list showing the responsibility 1`] = `
"<ul>
  <li>
    <div>
      <p>Test Description 1</p>
    </div>
  </li>
</ul>"
`;

exports[`Responsibilities when responsibilities prop is set to one responsibility with Markdown in the description renders the responsibility with the Markdown converted to HTML 1`] = `
"<ul>
  <li>
    <div>
      <p>Text with <em>bold</em> formatting</p>
    </div>
  </li>
</ul>"
`;
